--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
     // APIをフェッチする関数
     function fetchAPI() {
       // REST APIのURL（例としてJSONPlaceholderを使用）
-      const apiUrl = 'http://127.0.0.1:8000/';
+      const apiUrl = 'https://render-python-test-z9io.onrender.com/items/123131';
 
       // Fetch APIを使用してリクエストを送信
       fetch(apiUrl)
