Update API URL in index.html

--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
   <script>
     // APIをフェッチする関数
     function fetchAPI() {
-      // REST APIのURL（例としてJSONPlaceholderを使用）
+      // REST APIのURL（ルートでHello World、/items/数字で番号を返す）
       const apiUrl = 'https://render-python-test-z9io.onrender.com/items/123131';
 
       // Fetch APIを使用してリクエストを送信
